unpackaged/main/default/objects/DCp_Arcus_Transactions__c/DCp_Arcus_Transactions__c.object-meta.xml
<CustomObject>
    <label>DCP Arcus Transaction</label>
    <nameField>
        <displayFormat>DAT-{0}</displayFormat>
        <label>DCp Arcus Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCP Arcus Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>