unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DCP Arcus Transaction</relationshipLabel>
    <relationshipName>DCP_Arcus_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>