unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>DCP Arcus Transaction</relationshipLabel>
    <relationshipName>DCP_Arcus_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>