unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Arcus_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Arcus_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arcus Eligible</label>
    <type>Checkbox</type>
</CustomField>