unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Arcus_Failed_Message__c.field-meta.xml
<CustomField>
    <fullName>Arcus_Failed_Message__c</fullName>
    <label>Arcus Failed Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>