unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Arcus_Failure_Response__c.field-meta.xml
<CustomField>
    <fullName>Arcus_Failure_Response__c</fullName>
    <description>stores response from arcus in case of failure</description>
    <label>Arcus Failure Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>