unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>