unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Braintree_Verification_Failed__c.field-meta.xml
<CustomField>
    <fullName>Braintree_Verification_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Braintree Verification Failed</label>
    <type>Checkbox</type>
</CustomField>