unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Credit_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Name__c</fullName>
    <label>Credit Card Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>