unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/DCP_Callout_done__c.field-meta.xml
<CustomField>
    <fullName>DCP_Callout_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCP Callout done</label>
    <type>Checkbox</type>
</CustomField>