unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/DCP_Callout_successful__c.field-meta.xml
<CustomField>
    <fullName>DCP_Callout_successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when we get successful response from ARCUS</description>
    <label>DCP Callout successful</label>
    <type>Checkbox</type>
</CustomField>