unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/FE_Id__c.field-meta.xml
<CustomField>
    <fullName>FE_Id__c</fullName>
    <description>Unique ID from FE to update Transactions</description>
    <externalId>true</externalId>
    <label>FE Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>