unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Member_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Code__c</fullName>
    <label>Member Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>