unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Pay_at_Funding__c.field-meta.xml
<CustomField>
    <fullName>Pay_at_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay at Funding</label>
    <type>Checkbox</type>
</CustomField>