unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <label>Portfolio Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>