unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>