unpackaged/main/default/objects/DCp_Arcus_Transactions__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>